--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "fastapi-users-ormar-ext"
-version = "0.1.1"
+name = "fastapi-users-ormar-extension"
+version = "0.2.0"
 description = "Use ormar for your fastapi-users project."
 authors = ["Jegor Kitskerkin <jegor.kitskerkin@gmail.com>"]
 license = "MIT License"
