--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "fastapi-users-ormar-extension"
-version = "0.2.0"
+version = "0.3.0"
 description = "Use ormar for your fastapi-users project."
-authors = ["Jegor Kitskerkin <jegor.kitskerkin@gmail.com>"]
+authors = ["Melih Değiş <melihdegis@gmail.com>"]
 license = "MIT License"
 readme = "README.md"
 packages = [{include = "fastapi_users_ormar_extension"}]
@@ -10,7 +10,7 @@ packages = [{include = "fastapi_users_ormar_extension"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi-users = ">=10.2.0"
-ormar = "~0.12.0"
+ormar = ">0.12.2"
 
 
 [build-system]
